2019-1/220/users/4266/executions/1858_1273.log
== TEST (2019-07-01 22:21:06) 
-- CODE:
from numpy import*
from numpy import.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- ERROR:
File "XXXX", line 2
    from numpy import.linalg import*
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:22:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- EXECUTION TIME:
1.01504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1858/1273/main.py", line 5, in <module>
    n = n.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:22:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:22:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]

n = n.T
res = solve(m,n)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:22:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:23:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:23:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:24:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:24:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:24:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,1,-3,0],[0,0,1,0],[1,0,0,1]]
n = [50,-120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:25:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,-1,3,0],[0,0,1,0],[1,0,0,1]]
n = [50,120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:25:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = [[1,-1,0,0],[0,-1,3,0],[0,0,1,0],[1,0,0,1]]
n = [50,120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:26:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array[[1,-1,0,0],[0,-1,3,0],[0,0,1,0],[1,0,0,1]]
n = array[50,120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:27:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array[[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]]
n = array[50,-120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:28:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1])
n = array[50,-120,350,870]
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:28:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1])
n = array[50,-120,350,870]
n = n.T
res = colvo(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:29:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array[50,-120,350,870]
n = n.T
res = colvo(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:29:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array([50,-120,350,870])
n = n.T
res = colvo(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:30:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array([50,-120,350,870])
n = n.T
res = solve(m,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:30:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array([50,-120,350,870])
n = n.T
res = solve(m,n)

print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:31:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array([50,-120,350,870])
n = n.T
res = solve(m,n)

print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:32:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
n = array([50,-120,350,870])
n = n.T
res = solve(m,n)

print(res)
-- EXECUTION TIME:
0.993542
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
